--- a/index.html
+++ b/index.html
@@ -4,11 +4,52 @@
     <head>
         <title>Vitalis' Site</title>
         <link href="css/index.css" rel="stylesheet">
-        <script src="js/index.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1 id="title">WELCOME TO MY SITE!</h1>
-        <div id="divider"> </div>
-        <img id="exp" src="img/explosion.gif">
+        <div class="box" id="about">
+            <img id="pic" src="img/profile pic 2.jpeg">
+            <div class="block" id="about_block">
+                <h1 class="title" id="about_title">Vitalis Pyskinas</h3>
+                <div class="text" id="about_text">
+                    A Mathematics graduate self-studying machine learning.
+                </div>
+            </div>
+        </div>
+        <div class="box" id="projects">
+            <h1 class="title">Projects</h3>
+            <div class="blocks">
+                <div class="block">
+                    <h3 class="subtitle">
+                        Second year multi-layer perceptron project
+                    </h3>
+                    <div class="text">
+                        Programmed in MATLAB, then in Python later. <br>
+                        No AI libraries, illustrating mathematical understanding.<br>
+                        Over 90% accuracy on MNIST digits. 
+                    </div>
+                </div>
+                <div class="block">
+                    <h3 class="subtitle">
+                        Computer vision final-year project
+                    </h3>
+                    <div class="text">
+                        Programmed in Python. <br>
+                        Created an AI model that can identify clothes in images.<br>
+                        88% performance on MNIST fashion dataset. 
+                    </div>
+                </div>
+                <div class="block">
+                    <h3 class="subtitle">
+                        Computer vision assignments
+                    </h3>
+                    <div class="text">                       
+                        University of Michigan’s EECS 498 online material. <br>
+                        Extensive use of PyTorch in all assignments. <br>
+                        Covers attention, transformers, GANs, and more 
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
