--- a/index.html
+++ b/index.html
@@ -21,32 +21,25 @@
             <div class="blocks">
                 <div class="block">
                     <h3 class="subtitle">
-                        Second year multi-layer perceptron project
+                        Multi layer perceptrons
                     </h3>
                     <div class="text">
-                        Programmed in MATLAB, then in Python later. <br>
-                        No AI libraries, illustrating mathematical understanding.<br>
-                        Over 90% accuracy on MNIST digits. 
+                        Python - Numpy only. <br>
+                        Over 90% on MNIST digits. <br>
+                        Over 88% on MNIST fashion. <br>
+                        I know my maths 😤
                     </div>
                 </div>
                 <div class="block">
                     <h3 class="subtitle">
-                        Computer vision final-year project
-                    </h3>
-                    <div class="text">
-                        Programmed in Python. <br>
-                        Created an AI model that can identify clothes in images.<br>
-                        88% performance on MNIST fashion dataset. 
-                    </div>
-                </div>
-                <div class="block">
-                    <h3 class="subtitle">
-                        Computer vision assignments
+                        Computer vision
                     </h3>
                     <div class="text">                       
-                        University of Michigan’s EECS 498 online material. <br>
-                        Extensive use of PyTorch in all assignments. <br>
-                        Covers attention, transformers, GANs, and more 
+                        UMich EECS 498 (<a id="umich" href="https://web.eecs.umich.edu/~justincj/teaching/eecs498/WI2022/">here</a>). <br>
+                        6 Pytorch assignments. <br>
+                        Topics: CNNs, detection, segmentation, attention, transformers,
+                        RCNNs, generative models. <br>
+                        Datasets: CIFAR-10, VOC2007, COCO.
                     </div>
                 </div>
             </div>
