--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     </head>
     <body>
         <div class="box" id="about">
-            <img id="pic" src="img/profile pic 2.jpeg">
+            <img id="pic_face" src="img/profile pic 2.jpeg">
             <div class="block" id="about_block">
                 <h1 class="title" id="about_title">Vitalis Pyskinas</h3>
                 <div class="text" id="about_text">
-                    A Mathematics graduate self-studying machine learning.
+                    A mathematics graduate self-studying machine learning.
+                </div>
+                <div id="links">
+                    <a href="https://www.linkedin.com/in/pyskinas/"><img id="linkedin" src="img/linkedin.png"></a>
+                    <a href="https://github.com/pyskinas"><img id="github" src="img/github.png"></a>
                 </div>
             </div>
         </div>
@@ -21,25 +25,73 @@
             <div class="blocks">
                 <div class="block">
                     <h3 class="subtitle">
-                        Multi layer perceptrons
+                        Multi Layer Perceptron
                     </h3>
                     <div class="text">
-                        Python - Numpy only. <br>
-                        Over 90% on MNIST digits. <br>
-                        Over 88% on MNIST fashion. <br>
+                        Python - numpy only. <br>
+                        Over 88% on MNIST fashion (<a href="https://github.com/pyskinas/fashionMNIST">github</a>). <br>
                         I know my maths 😤
                     </div>
                 </div>
                 <div class="block">
                     <h3 class="subtitle">
-                        Computer vision
+                        Computer Vision
                     </h3>
                     <div class="text">                       
-                        UMich EECS 498 (<a id="umich" href="https://web.eecs.umich.edu/~justincj/teaching/eecs498/WI2022/">here</a>). <br>
-                        6 Pytorch assignments. <br>
-                        Topics: CNNs, detection, segmentation, attention, transformers,
-                        RCNNs, generative models. <br>
+                        6 Pytorch assignments (from <a href="https://web.eecs.umich.edu/~justincj/teaching/eecs498/WI2022/schedule.html">EECS498</a>). <br>
+                        Topics: CNNs, object detection, image captioning. <br>
                         Datasets: CIFAR-10, VOC2007, COCO.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="box" id="education">
+            <h1 class="title">Education</h3>
+            <div class="blocks">
+                <div class="block">
+                    <h3 class="subtitle">
+                        Mathematics BSc
+                    </h3>
+                    <div class="text">
+                        Brunel University London.<br>
+                        First class honours.<br>
+                        Awarded the Institute of Applied Mathematics award. 
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="box" id="self-study">
+            <h1 class="title">Self Study</h3>
+            <div class="blocks">
+                <div class="block">
+                    <div><i>Note, I completed all courses below in their entirety.</i></div>
+                    <h3 class="subtitle">
+                        Computer Vision
+                    </h3>
+                    <div class="text">
+                        Topics include transformers, generative models, self-supervised learning. <br>
+                        My lecture notes here.<br>
+                        University of Michigan EECS498/598 (<a href="https://web.eecs.umich.edu/~justincj/teaching/eecs498/WI2022/schedule.html">here</a>).
+                    </div>
+                </div>
+                <div class="block">
+                    <h3 class="subtitle">
+                        Mathematics for Machine Learning
+                    </h3>
+                    <div class="text">
+                        Topics include matrix decompositions, probability & distributions, continuous optimisation.<br>
+                        My lecture notes here.<br>
+                        Cambridge University Press textbook by Deisenroth, Faisal, Ong (<a href="https://mml-book.github.io/">here</a>).
+                    </div>
+                </div>
+                <div class="block">
+                    <h3 class="subtitle">
+                        Introduction to Deep Learning
+                    </h3>
+                    <div class="text">
+                        Topics include debiasing, liquid time-constant networks, reinforcement learning.<br>
+                        My lecture notes <a href="https://pyskinas.github.io/mit/">here</a>. <br>
+                        MITs deep learning Introduction (<a href="https://introtodeeplearning.com/">here</a>).
                     </div>
                 </div>
             </div>
