--- a/index.html
+++ b/index.html
@@ -22,23 +22,28 @@
         </div>
         <div class="box" id="projects">
             <h1 class="title">Projects</h3>
+            <div class="note"><i>Links are red.</i></div>
             <div class="blocks">
                 <div class="block">
-                    <h3 class="subtitle">
-                        Multi Layer Perceptron
-                    </h3>
+                    <a href="https://github.com/pyskinas/fashionMNIST">
+                        <h3 class="subtitle">
+                            Fully Connected Neural Network (MLP)
+                        </h3>
+                    </a>
                     <div class="text">
                         Python - numpy only. <br>
-                        Over 88% on MNIST fashion (<a href="https://github.com/pyskinas/fashionMNIST">github</a>). <br>
+                        88% on MNIST fashion. <br>
                         I know my maths 😤
                     </div>
                 </div>
                 <div class="block">
-                    <h3 class="subtitle">
-                        Computer Vision
-                    </h3>
+                    <a href="https://github.com/pyskinas/eecs-assignments">
+                        <h3 class="subtitle">
+                            Computer Vision Assignments
+                        </h3>
+                    </a>
                     <div class="text">                       
-                        6 Pytorch assignments (from <a href="https://web.eecs.umich.edu/~justincj/teaching/eecs498/WI2022/schedule.html">EECS498</a>). <br>
+                        Pytorch assignments from <i>Deep Learning for Computer Vision</i>.<br>
                         Topics: CNNs, object detection, image captioning. <br>
                         Datasets: CIFAR-10, VOC2007, COCO.
                     </div>
@@ -64,14 +69,13 @@
             <h1 class="title">Self Study</h3>
             <div class="blocks">
                 <div class="block">
-                    <div><i>Note, I completed all courses below in their entirety.</i></div>
                     <h3 class="subtitle">
-                        Computer Vision
+                        Deep Learning for Computer Vision
                     </h3>
                     <div class="text">
-                        Topics include transformers, generative models, self-supervised learning. <br>
-                        My lecture notes here.<br>
-                        University of Michigan EECS498/598 (<a href="https://web.eecs.umich.edu/~justincj/teaching/eecs498/WI2022/schedule.html">here</a>).
+                        Topics include transformers, GANs, self-supervised learning. <br>
+                        <a href="https://pyskinas.github.io/eecs">My lecture notes</a>.<br>
+                        <a href="https://web.eecs.umich.edu/~justincj/teaching/eecs498/WI2022/schedule.html">University of Michigan EECS498/598 online material</a>.
                     </div>
                 </div>
                 <div class="block">
@@ -80,8 +84,8 @@
                     </h3>
                     <div class="text">
                         Topics include matrix decompositions, probability & distributions, continuous optimisation.<br>
-                        My lecture notes here.<br>
-                        Cambridge University Press textbook by Deisenroth, Faisal, Ong (<a href="https://mml-book.github.io/">here</a>).
+                        <a href="">My lecture notes.</a><br>
+                        <a href="https://mml-book.github.io/">Textbook (Deisenroth, Faisal, Ong, 2022)</a>.
                     </div>
                 </div>
                 <div class="block">
@@ -89,9 +93,9 @@
                         Introduction to Deep Learning
                     </h3>
                     <div class="text">
-                        Topics include debiasing, liquid time-constant networks, reinforcement learning.<br>
-                        My lecture notes <a href="https://pyskinas.github.io/mit/">here</a>. <br>
-                        MITs deep learning Introduction (<a href="https://introtodeeplearning.com/">here</a>).
+                        Topics include debiasing, liquid time-constant networks, RL.<br>
+                        <a href="https://pyskinas.github.io/mit/">My lecture notes</a>. <br>
+                        <a href="https://introtodeeplearning.com/">MITs Introduction to Deep Learning online material</a>.
                     </div>
                 </div>
             </div>
